fix(UI): Wrap very long words on multiple lines

--- a/app/routes/Home/routes/Entry/components/entry-page-content.scss
+++ b/app/routes/Home/routes/Entry/components/entry-page-content.scss
@@ -8,6 +8,7 @@
     font-size: 42px;
     font-weight: 400;
     padding-top: 48px;
+    word-wrap: break-word;
 }
 .entry_content {
     margin: 0 auto;
